Fixes half pixel offsetin vertical alignment

--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -43,7 +43,7 @@ body.blog {
     }
 
     .read-more {
-        line-height: 23px;
+        line-height: 24px;
         font-size: 10px;
         margin: 30px 0;
         letter-spacing: 0.5px;
@@ -53,8 +53,8 @@ body.blog {
                 display: inline-block;
                 vertical-align: bottom;
                 background: url('../img/more-arrow.png') no-repeat center/contain;
-                width: 23px;
-                height: 23px;
+                width: 24px;
+                height: 24px;
                 margin: 0 0 0 10px;
             }
         }
